# OpenCVBlueprints

./: .gitignore  CONTRIBUTING.md  ERRATA.md  README.md  license.txt
chapter_1/: README.md
chapter_1/Infravision/: Infravision.cpp  Infravision.sln  Infravision.vcxproj  Infravision.vcxproj.filters  build.sh
chapter_1/LookSpry/: LookSpry.cpp  LookSpry.sln  LookSpry.vcxproj  LookSpry.vcxproj.filters  build.sh
chapter_1/UnblinkingEye/: UnblinkingEye.cpp  build.sh
chapter_1/UnblinkingEye/media/: COPYRIGHT.txt
chapter_2/: README.md
chapter_2/CameraTrap/: CVBackwardCompat.py  CameraCommander.py  capture_exposure_bracket.sh  set_classifier_trap.py  set_color_trap.py  set_motion_trap.py  test_camera_commands.py  test_hdr_merge.py  test_time_lapse_merge.py  unmount_cameras.sh
chapter_3/: CMakeLists.txt  README.md  facial_components.cpp  feature_extraction.cpp  train.cpp
chapter_3/libflandmark/: flandmark_detector.h
chapter_4/: README.md
chapter_4/Panorama/app/: build.gradle  proguard-rules.pro
chapter_4/Panorama/opencv-java/: build.gradle
chapter_5/: README.md
chapter_5/source_code/: README.md  count_samples.cpp  detect_score.cpp  generate_negatives.cpp  object_annotation.cpp  precision_recall.m  rotation_invariant_object_detection.cpp
chapter_6/: README.md
chapter_7/: README.md
chapter_7/python/: calibration.py  stable.py  test_calibration.py  test_utilities.py  utilities.py
chapter_8/: README.md
installation_tutorials/: README.md  installation_linux.md  installation_mac.md  installation_osx.md  installation_windows.md
(+311 files in other folders)
